--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-import": "^2.27.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "http-status-codes": "^2.2.0",
     "mongoose": "^5.13.15",
     "morgan": "^1.10.0"
   },
