--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "api-schema-builder": "npx @janiscommerce/api-schema-builder",
+    "test-schema": "npx @redocly/openapi-cli preview-docs schemas/public.json"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@janiscommerce/api-schema-builder": "^1.1.1",
     "nodemon": "^2.0.22"
   }
 }
