--- a/schemas/src/public/task/create.yml
+++ b/schemas/src/public/task/create.yml
@@ -5,6 +5,8 @@ paths:
       tags:
         - Task
       summary: Create Task
+      security:
+        - bearerAuth: []
       description: |
 
         This service is responsible for creating tasks in database
