--- a/schemas/src/public/task/get.yml
+++ b/schemas/src/public/task/get.yml
@@ -5,6 +5,8 @@ paths:
       tags:
         - Task
       summary: Get Tasks
+      security:
+        - bearerAuth: []
       parameters:
         - in: query
           name: status
