--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "appeiron challenge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_env=test jest",
     "dev": "nodemon app.js",
     "api-schema-builder": "npx @janiscommerce/api-schema-builder",
     "test-schema": "npx @redocly/openapi-cli preview-docs schemas/public.json"
@@ -34,6 +34,9 @@
   },
   "devDependencies": {
     "@janiscommerce/api-schema-builder": "^1.1.1",
-    "nodemon": "^2.0.22"
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
+    "jsonwebtoken": "^9.0.0"
   }
 }
