--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "node_env=test jest",
     "dev": "nodemon app.js",
     "api-schema-builder": "npx @janiscommerce/api-schema-builder",
-    "test-schema": "npx @redocly/openapi-cli preview-docs schemas/public.json"
+    "test-schema": "npx @redocly/openapi-cli preview-docs schemas/public.json",
+    "doc": "npm run api-schema-builder && npm run test-schema"
   },
   "repository": {
     "type": "git",
